# esp-bluedroid

./: .gitignore  Cargo.toml  diagram.json  sdkconfig.defaults  wokwi.toml
.cargo/: config.toml
.github/workflows/: rust_ci.yml
crates/esp-bluedroid-cli/: Cargo.toml
crates/esp-bluedroid-logger/: Cargo.toml
crates/esp-bluedroid-logger/src/: lib.rs
crates/esp-bluedroid-ota/: Cargo.toml
example-app/: Cargo.toml  diagram.json
example-app/partitions/: esp32-ota-8m.csv
example-app/src/: esp_bluedroid_example.rs  esp_idf_example.rs  hello_world.rs  lib.rs  main.rs
examples/general/: Cargo.toml
examples/general/src/: main.rs
partitions/: esp32-ota-8m.csv
src/: ble.rs  example.rs  gap.rs  gatts.rs  lib.rs  main.rs
src/gap/: event.rs  events.rs  mod.rs
src/gatts/: app.rs  attribute.rs  characteristic.rs  connection.rs  descriptor.rs  event.rs  mod.rs  service.rs
src/gatts/attribute/: defaults.rs  mod.rs
