[package]
name = "esp-bluedroid"
version = "0.1.0"
authors = ["Demid Kaidalov <demid.kaidalov@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.85"

[workspace]
members = [
    ".",
    "crates/esp-bluedroid-cli",
    "crates/esp-bluedroid-logger",
    "crates/esp-bluedroid-ota",
    "examples/general"
]

[[bin]]
# name = "esp-bluedroid"
# harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors
name = "esp-bluedroid"
path = "examples/general/src/main.rs"
harness = false

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync", "experimental"] }
anyhow = "1.0.97"
enumset = "1.1.5"
serde = "1.0.219"
bincode = {version = "2.0.1", features = ["serde"]}
crossbeam-channel = "0.5.15"

[build-dependencies]
embuild = "0.33"
