[package]
name = "general"
version = "0.1.0"
edition = "2024"
resolver = "2"
rust-version = "1.85"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
esp-bluedroid = { path = ".." }
esp-bluedroid-logger = { path = "../crates/esp-bluedroid-logger" }
esp-idf-svc = { version = "0.51", features = [
    "critical-section",
    "embassy-time-driver",
    "embassy-sync",
    "experimental",
] }
serde = "1.0.219"
log = "0.4"
anyhow = "1.0.97"


[build-dependencies]
embuild = "0.33"

[workspace]
