[package]
name = "example-app"
version = "0.1.0"
edition = "2024"
resolver = "2"
rust-version = "1.85"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
esp-bluedroid = { path = ".." }
esp-bluedroid-logger = { path = "../crates/esp-bluedroid-logger" }
esp-idf-svc = { version = "0.51", features = ["experimental"] }
serde = "1.0.219"
log = "0.4"
anyhow = "1.0.97"

[build-dependencies]
embuild = "0.33"
