[package]
name = "general"
version = "0.1.0"
edition = "2024"

[dependencies]
esp-bluedroid = { path = "../.." }
serde = "1.0.219"
esp-idf-svc = { version = "0.51", features = [
    "critical-section",
    "embassy-time-driver",
    "embassy-sync",
    "experimental",
] }
log = "0.4"
anyhow = "1.0.97"
